--- a/ebook/package.json
+++ b/ebook/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start:server": "json-server --watch db.json -p 3004 ",
+    "start:server": "json-server-auth --watch db.json -p 3004  ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -39,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "json-server-auth": "^2.1.0"
   }
 }
